Adding changes to various pages

--- a/about.html
+++ b/about.html
@@ -18,25 +18,101 @@
         <div class="menuDiv">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Songs</a>
+                    <a class="nav-link" href="songs.html">Songs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Bookings</a>
+                    <a class="nav-link" href="bookings.html">Bookings</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
     </header>
     <section>
-        
+        <div class="aboutContainer aboutBackground">
+            <div class="aboutIntro">
+                <h3>About The Band</h3> 
+                <br>
+                <p>The Monkees are an American rock and pop band originally active between 1966 and 1971, with reunion albums 
+                and tours in the decades that followed. Their original line-up consisted of the American actor/musicians Micky 
+                Dolenz, Michael Nesmith, and Peter Tork with English actor/singer Davy Jones. The group was conceived in 1965
+                by television producers Bob Rafelson and Bert Schneider specifically for the situation comedy series The Monkees,
+                which aired from 1966 to 1968. The band's music was initially supervised by record producer Don Kirshner, backed 
+                by the songwriting duo of Tommy Boyce and Bobby Hart.</p>
+                <p>Dolenz described The Monkees as initially being "a TV show about an imaginary band... that wanted to be the
+                Beatles that was never successful". Ironically, the success of the show led to the actor-musicians becoming one 
+                of the most successful bands of the 1960s. The Monkees have sold more than 75 million records worldwide making 
+                them one of the biggest selling groups of all time with international hits, including "Last Train to Clarksville",
+                "Pleasant Valley Sunday", "Daydream Believer", and "I'm a Believer". Newspapers and magazines reported that the 
+                Monkees outsold the Beatles and the Rolling Stones combined in 1967, but Nesmith admitted in his autobiography 
+                Infinite Tuesday that it was a lie that he told a reporter.</p>
+            </div>
+            <div class="aboutMeet">
+                <h3>Meet The Band</h3> 
+                <br>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="assets/images/pt.jpg" class="rounded-circle mr-3" height=110 width=110>
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <h5>Peter Tork</h5>
+                                    <p>Guitar / Vocals</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="assets/images/md.jpg" class="rounded-circle mr-3" height=110 width=110>
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <h5>Micky Dolenz</h5>
+                                    <p>Drummer / Vocals</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="assets/images/mn.jpg" class="rounded-circle mr-3" height=110 width=110>
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <h5>Michael Nesmith</h5>
+                                    <p>Guitar / Vocals</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="assets/images/dj.jpg" class="rounded-circle mr-3" height=110 width=110>
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <h5>Davy Jones</h5>
+                                    <p>Piano / Vocals</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <div class="footer">
