--- a/songs.html
+++ b/songs.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
-    <title>The Monkeys</title>
+    <title>The Monkees</title>
 </head>
 <body>
     <header>
@@ -18,25 +18,75 @@
         <div class="menuDiv">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Songs</a>
+                    <a class="nav-link" href="songs.html">Songs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Bookings</a>
+                    <a class="nav-link" href="bookings.html">Bookings</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
     </header>
     <section>
-        
+        <div class="songsContainer songsBackground">
+            <h3>Media</h3>
+            <br><br>
+            <p>Here are a sample of some of the Monkees greatest hits</p>
+            <br>
+            <p>Take a listen and download any youd like to keep and listen to again on your own devices</p>
+            <br>
+            <div class="songsAudioContainer">
+                <div>
+                    <div>
+                        <strong><i>Clarksville</i></strong>
+                    </div>
+                    <div>
+                        <audio controls>
+                            <source src="assets/audio/Clarksville.mp3" type="audio/mpeg">
+                        </audio>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <strong><i>Daydream Believer</i></strong>
+                    </div>
+                    <div>
+                        <audio controls>
+                            <source src="assets/audio/DaydreamBeliever.mp3" type="audio/mpeg">
+                        </audio>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <strong><i>I'm A Believer</i></strong>
+                    </div>
+                    <div>
+                        <audio controls>
+                            <source src="assets/audio/ImABeliever.mp3" type="audio/mpeg">
+                        </audio>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <strong><i>Stepping Stone</i></strong>
+                    </div>
+                    <div>
+                        <audio controls>
+                            <source src="assets/audio/SteppingStone.mp3" type="audio/mpeg">
+                        </audio>
+                    </div>
+                
+                </div>
+            </div>
+        </div>    
     </section>
     <footer>
         <div class="footer">
