Modified contact page

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,42 @@
         </div>
     </header>
     <section>
-        
+        <div class="contactContainer contactBackground">
+            <h3>Contact Us</h3>
+            <br><br>
+            <p>Fill out the form below for any other queries or messages for the band</p>
+            <br>
+            <div class="row">
+                <div class="col">
+                    <div class="center-form">
+                        <form>
+                            <input type="text" name="name" id="fullName" class="form-control" placeholder="Name" required/>
+                            <input type="email" name="email" id="emailAddress" class="form-control" placeholder="Email" required/>
+                            <textarea rows="5" name="message" id="message" class="form-control" placeholder="Message" required/></textarea>
+                            <div class="form-row text-center">
+                                <div class="col">
+                                    <button type="submit" class="btn btn-secondary">Send Message</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="contactEmailPostalContainer">
+                <div class="contactEmail">
+                    <h7>For Email queries, please send correspondence to:</h7>
+                    <a href="mailto:monkeescorp@gmail.com?subject=Website query">Monkees Email</a>
+                </div>
+                <div class="contactPostal">
+                    <h5>Postal Address:</h5>
+                    <br>
+                    <p>PO. Box 1789</p>
+                    <p>Nashaw St.</p>
+                    <p>Southbank</p>
+                    <p>San Diego CA</p>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <div class="footer">
