Modified contact page

--- a/contact.html
+++ b/contact.html
@@ -65,10 +65,10 @@
                 <div class="contactPostal">
                     <h5>Postal Address:</h5>
                     <br>
-                    <p>PO. Box 1789</p>
-                    <p>Nashaw St.</p>
-                    <p>Southbank</p>
-                    <p>San Diego CA</p>
+                    <i><strong>PO. Box 1789, </strong></i>
+                    <i><strong>Nashaw St., </strong></i>
+                    <i><strong>Southbank, </strong></i>
+                    <i><strong>San Diego CA</strong></i>
                 </div>
             </div>
         </div>
