Reduced Contact page spacing, fixed form issue causing unwanted sizing, added links to pages in welcome page text.

--- a/bookings.html
+++ b/bookings.html
@@ -46,70 +46,67 @@
             <br>
             <div class="bookingsListContainer">
                 <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">From</th>
-                        <th scope="col">To</th>
-                        <th scope="col">Location</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>01/02/2019</td>
-                        <td>01/02/2019</td>
-                        <td>Richmond, VA</td>
-                    </tr>
-                    <tr>
-                        <td>20/05/2019</td>
-                        <td>25/05/2019</td>
-                        <td>Tuscon, AR</td>
-                    </tr>
-                    <tr>
-                        <td>06/07/2019</td>
-                        <td>07/07/2019</td>
-                        <td>San Diego, CA</td>
-                    </tr>
-                    <tr>
-                        <td>28/07/2019</td>
-                        <td>28/07/2019</td>
-                        <td>Denver, CO</td>
-                    </tr>
-                    <tr>
-                        <td>22/08/2019</td>
-                        <td>22/08/2019</td>
-                        <td>San Diego, CO</td>
-                    </tr>
-                    <tr>
-                        <td>29/07/2019</td>
-                        <td>29/07/2019</td>
-                        <td>New York, NY</td>
-                    </tr>
-                    <tr>
-                        <td>06/09/2019</td>
-                        <td>11/09/2019</td>
-                        <td>Hartford, CT</td>
-                    </tr>
-                    </tr>
-                </tbody>
-            </table>    
+                    <thead>
+                        <tr>
+                            <th scope="col">From</th>
+                            <th scope="col">To</th>
+                            <th scope="col">Location</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>01/02/2019</td>
+                            <td>01/02/2019</td>
+                            <td>Richmond, VA</td>
+                        </tr>
+                        <tr>
+                            <td>20/05/2019</td>
+                            <td>25/05/2019</td>
+                            <td>Tuscon, AR</td>
+                        </tr>
+                        <tr>
+                            <td>06/07/2019</td>
+                            <td>07/07/2019</td>
+                            <td>San Diego, CA</td>
+                        </tr>
+                        <tr>
+                            <td>28/07/2019</td>
+                            <td>28/07/2019</td>
+                            <td>Denver, CO</td>
+                        </tr>
+                        <tr>
+                            <td>22/08/2019</td>
+                            <td>22/08/2019</td>
+                            <td>San Diego, CO</td>
+                        </tr>
+                        <tr>
+                            <td>29/07/2019</td>
+                            <td>29/07/2019</td>
+                            <td>New York, NY</td>
+                        </tr>
+                        <tr>
+                            <td>06/09/2019</td>
+                            <td>11/09/2019</td>
+                            <td>Hartford, CT</td>
+                        </tr>
+                    </tbody>
+                </table>    
             </div>
-            <div class="row">
-                <div class="col">
-                    <h5 class="uppercase text-center">Booking Application</h5>
-                    <div class="center-form">
-                        <form>
-                            <input type="text" name="name" id="fullName" class="form-control" placeholder="Name" required/>
-                            <input type="email" name="email" id="emailAddress" class="form-control" placeholder="Email" required/>
-                            <input type="date" name="startDate" id="startDate" class="form-control" placeholder="Start Date" required/>
-                            <input type="date" name="endDate" id="endDate" class="form-control" placeholder="End Date" required/>
-                            <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Description of event" required/></textarea>
-                            <div class="form-row text-center">
-                                <div class="col">
-                                    <button type="submit" class="btn btn-secondary">Send Booking Request</button>
-                                </div>
+            <div class="col">
+                <h5 class="text-center">Booking Application</h5>
+                <div class="center-form">
+                    <form>
+                        <input type="text" name="name" id="fullName" class="form-control" placeholder="Name" required/>
+                        <input type="email" name="email" id="emailAddress" class="form-control" placeholder="Email" required/>
+                        <input type="date" name="startDate" id="startDate" class="form-control" placeholder="Start Date" required/>
+                        <input type="date" name="endDate" id="endDate" class="form-control" placeholder="End Date" required/>
+                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Description of event" required/></textarea>
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send Booking Request</button>
                             </div>
-                        </form>
-                    </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>    
