--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
             <div class="welcomeMessage">
                 <h1>WELCOME TO THE HOME SITE OF THE MONKEES!!</h1> 
                 <br>
-                <h3>One of the greatest bands of the 60's, fans all over the world and still available for concents and shows!</h3>
+                <h3>One of the greatest bands of the 60's, fans all over the world and still available for concents and
+                shows! If you'd like to book them for an event, <a href="bookings.html">click here</a>.</h3>
                 <br>
-                <h3>With a huge back catalog of songs, the Monkees remain as one of the most popular bands of the era, still performing to fans all over the world.</h3>
-                
+                <h3>With a huge back catalog of songs, the Monkees remain as one of the most popular bands of the era, 
+                still performing to fans all over the world. To listen to a few of their tracks, <a href="songs.html">click here</a>.</h3>
             </div>
         </div>
     </section>
